remove obsolete request methods #11017 (#11018)